Fix subtemplates select z-index

--- a/public/css/sass/components/settingsPanel/SettingsPanel.scss
+++ b/public/css/sass/components/settingsPanel/SettingsPanel.scss
@@ -344,7 +344,7 @@
 .settings-panel-subtemplates {
   position: sticky;
   top: 0;
-  z-index: 3;
+  z-index: 1;
   background-color: $white;
   width: 100%;
   padding: unset;
